greenstreet/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: greenstreet-api

spec:
  replicas: 1

  selector:
    matchLabels:
      app: greenstreet-api

  template:
    metadata:
      labels:
        app: greenstreet-api

    spec:
      containers:
      - name: api
        image: greenstreet-api:latest

        ports:
        - containerPort: 8000
