greenstreet/k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: greenstreet-api

spec:
  selector:
    app: greenstreet-api

  ports:
  - port: 8000
    targetPort: 8000
