greenstreet/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: greenstreet

spec:
  ingressClassName: nginx

  rules:
  - host: greenstreet.local

    http:
      paths:

      - path: /
        pathType: Prefix

        backend:
          service:
            name: greenstreet-api

            port:
              number: 8000
